--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>수업 시간 알리미</title>
+    <!-- manifest 파일 연결 -->
+    <link rel="manifest" href="manifest.json">
     <!-- Tailwind CSS를 위한 스크립트 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
