--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         /* '무궁이 태호 호랑이 남매' 이미지를 배경으로 설정 */
         body {
             font-family: 'Inter', sans-serif;
-            background-image: url('https://wimg.heraldcorp.com/news/cms/2025/02/11/9/news-p.v1.20250211.bec465fd344441739c298ddb96d40022_P1.jpg');
+            background-image: url('https://i.namu.wiki/i/vzlCKTekAQcSoyZNmBfBLmsReUgao6-m9iwj4ziqa7s-RhQjUIgbmto0-Rq4Ze2kKfQPmHjtd1gzJAlxkY6egrzfhtL-KCCVqmKCCK1xIxcfJid-5shZu8kdQ-_Ao0O4oEgDyz3JZq7p4FQF63KRBQ.webp');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
