--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
         
-        /* 배경 이미지를 화면에 꽉 차게 설정하고, 반복하지 않도록 수정 */
+        /* 이미지를 8x8 바둑판 모양으로 수정 */
         body {
             font-family: 'Inter', sans-serif;
             background-image: url('https://i.namu.wiki/i/vzlCKTekAQcSoyZNmBfBLmsReUgao6-m9iwj4ziqa7s-RhQjUIgbmto0-Rq4Ze2kKfQPmHjtd1gzJAlxkY6egrzfhtL-KCCVqmKCCK1xIxcfJid-5shZu8kdQ-_Ao0O4oEgDyz3JZq7p4FQF63KRBQ.webp');
-            background-size: cover; /* 이미지를 화면에 꽉 차게 만듭니다 */
-            background-repeat: no-repeat; /* 이미지 반복을 제거합니다 */
+            background-size: 12.5% 12.5%; /* 이미지를 1/8 크기로 설정하여 8x8 격자를 만듭니다 */
+            background-repeat: repeat; /* 이미지를 반복합니다 */
             background-position: center;
             background-attachment: fixed; /* 스크롤해도 배경 이미지가 고정됩니다 */
         }
